Cleans criteria on search bars. Begins to set reconciliation algorithm for purchases
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1696 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1673,15 +1673,12 @@ arb:
     journal_entry:
       #>entry_cancel: 'Cancel of entry %{number}: %{name}'
       record_cancel: 'الانعكاس السلبي للقطعة %{number} : %{name}' #!
-      state:
+      state: #!
+      states:
         #>closed: 'Closed'
         #>confirmed: 'Confirmed'
         #>draft: 'Draft'
-    journal_entry_line:
-      state:
-        #>closed: 'Closed'
-        #>confirmed: 'Confirmed'
-        #>draft: 'Draft'
+    journal_entry_line: #!
     listing_node:
       add_filter: ' اضافة تصفية'
       all_columns: '-- جميع الاعمدة --'
