--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -494,7 +494,6 @@ fra:
     download_firefox: 'Télécharger Mozilla Firefox...'
     downpayment: 'Acompte'
     draft: 'Brouillard'
-    draft: 'Brouillard'
     duplicate: 'Dupliquer'
     duration: 'Durée'
     duration_in_hours_and_minutes: '%{hours}h %{minutes}min'
@@ -596,14 +595,13 @@ fra:
     journal: 'Journal'
     journal_detail: 'Cloturé au %{closed_on}'
     journal_entries: 'Écritures'
-    journal_entry_lines_states: 'États des écritures utilisées'
+    journal_entries_states: 'États des écritures utilisées'
     journal_name: '%{name}'
     journal_record_update: 'Modifier la pièce'
     journal_update: 'Modifier le journal'
     journal_view:
-      draft: 'Brouillard'
       entries: 'Écritures'
-      entry_lines: 'Lignes d''écritures'
+      lines: 'Lignes d''écritures'
       mixed: 'Écritures et lignes'
     journals: 'Journaux'
     land_parcel_name: 'Îlot'
@@ -1132,7 +1130,7 @@ fra:
     exception_raised: 'Une erreur est survenue durant le traitement : %{message}'
     expired_session: 'Session expirée. Veuillez vous reconnecter.'
     fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : %{message}'
-    import_succeeded: 'Vos données ont été correctement importées'
+    import_succeeded: 'Vos données ont été correctement importées' #!
     importation_cancelled: 'Vos données n''ont été pas été importées. L''importation a été annulée'
     importation_finished: 'L''importation est terminée.'
     impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
@@ -1159,18 +1157,18 @@ fra:
     need_warehouse_to_record_stock_moves: 'Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage.'
     new_actual_number: 'Le nouveau numéro en cours est %{actual_number}'
     no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
-    no_balance_template: 'Pas de modèle de document pour la balance'
+    no_balance_template: 'Pas de modèle de document pour la balance' #!
     no_closable_financial_year: 'Vous n''avez aucun exercice à clôturer.'
     no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.'
     no_depositable_payments: 'Il n''y a pas de réglements à remettre en banque'
     no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant'
-    no_financial_year: 'Aucun exercice enregistré'
+    no_financial_year: 'Aucun exercice enregistré' #!
     no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
     no_payment_to_deposit: 'Aucun règlement à encaisser'
     no_reopenable_journal: 'Vous ne pouvez pas déclôturer ce journal.'
     no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.'
-    no_template_journal: 'Pas de modèle journal'
-    no_template_journal_by_id: 'Pas de modèle journal'
+    no_template_journal: 'Pas de modèle journal' #!
+    no_template_journal_by_id: 'Pas de modèle journal' #!
     no_unvalidated_operations: 'Aucun travail à réaliser'
     no_warehouse: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks'
     password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
