--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -13,7 +13,7 @@ jpn:
       #>bank_statement_point: 'Point bank statement %{number}'
       #>bank_statement_update: 'Edit bank statement %{number}'
       #>bank_statements: 'Bank statements'
-      #>bookkeep: 'Flip book'
+      #>bookkeep: 'Bookkeeping'
       #>document_print: 'Prints, exportations'
       #>draft: 'Draft'
       #>financial_year: 'Financial year %{code}'
@@ -21,7 +21,7 @@ jpn:
       #>financial_year_create: 'Open a new financial year'
       #>financial_year_update: 'Edit new financial year'
       #>financial_years: 'Financial years'
-      #>general_ledger: 'Ledger'
+      #>general_ledger: 'General ledger'
       #>index: 'General Accountancy'
       #>journal: 'Journal: %{name} (%{code})'
       #>journal_close: 'Closing of %{name}'
@@ -402,7 +402,7 @@ jpn:
     #>category: 'Category'
     #>category_name: 'Category'
     #>centralize: 'Centralize account'
-    #>centralized_account: 'Centralize account %{name}'
+    #>centralized_account: 'Centralized account %{name}'
     #>change_price: 'Change price'
     #>changes_reflected: 'Reflected changes'
     #>check: 'Check'
@@ -493,7 +493,6 @@ jpn:
     #>download_firefox: 'Download Mozilla Firefox...'
     #>downpayment: 'Downpayment'
     #>draft: 'Draft'
-    #>draft: 'Draft entry lines'
     #>duplicate: 'Duplicate'
     #>duration: 'Duration'
     #>duration_in_hours_and_minutes: '%{hours}h %{minutes}min'
@@ -595,14 +594,13 @@ jpn:
     #>journal: 'Journal'
     #>journal_detail: 'Closing on %{closed_on}'
     #>journal_entries: 'Entries Journal'
-    #>journal_entry_lines_states: 'Status of entry lines'
+    #>journal_entries_states: 'States of entries'
     #>journal_name: '%{name}'
     #>journal_record_update: 'Update document'
     #>journal_update: 'Update Journal'
     journal_view:
-      #>draft: 'Draft entries'
       #>entries: 'Entries'
-      #>entry_lines: 'Lines of entries'
+      #>lines: 'Lines of entries'
       #>mixed: 'Entries and lines'
     #>journals: 'Journals'
     #>land_parcel_name: 'Land parcel name'
@@ -891,7 +889,7 @@ jpn:
     #>save_in_draft: 'Save as draft'
     #>scheduled: 'Scheduled'
     search: '探す'
-    #>search_account: 'Search account'
+    #>search_account: 'Search for accounts'
     #>search_go: 'Search!'
     #>search_sales: 'Search sales'
     #>second_contact: 'Second address'
@@ -957,7 +955,7 @@ jpn:
     #>total_amount: 'Total amount'
     #>total_invoiced_amount: 'Total invoiced amount'
     #>total_quantity: 'Total quantity'
-    #>totals: 'Totals (Valided documents and draft)'
+    #>totals: 'Totals'
     #>tracking: 'Tracking'
     #>transfer: 'Transfer'
     #>transport: 'Transport'
@@ -1103,14 +1101,13 @@ jpn:
     #>columns_are_already_uses: 'One or many columns are selected many times'
     draft_entries_are_validated: #!
     draft_entry_lines_are_validated:
-      #>one: 'One record has been validated'
-      #>other: '%{count} records has been validated'
-      #>zero: 'No records has been validated'
+      #>one: 'One entry has been validated'
+      #>other: '%{count} entries have been validated'
+      #>zero: 'No entries has been validated'
     #>entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its name.'
     #>exception_raised: 'An error occurred during the processing: %{message}'
     #>expired_session: 'Session expired. Please reconnect.'
     #>fails_to_extract_listing: 'The listing can''t be made: %{message}'
-    #>import_succeeded: 'Your data have beeen successfully imported'
     #>importation_cancelled: 'Your data was not imported. Import has been canceled'
     #>importation_finished: 'The import is complete.'
     #>impossible_to_add_lines: 'You can add more products to your sale, the estimate is passed in order'
@@ -1137,18 +1134,14 @@ jpn:
     #>need_warehouse_to_record_stock_moves: 'You must create a warehouse to be able to manage stocks.'
     #>new_actual_number: 'The new number is being %{actual_number}'
     #>no_authenticated: 'You could not be identified. The username or password must be incorrect.'
-    #>no_balance_template: 'No template for the balance'
     #>no_closable_financial_year: 'No closable financial year.'
     #>no_closable_journal: 'No closable journal'
     #>no_depositable_payments: 'There are no payment to deposit'
     #>no_existing_mandates: 'There are no mandates'
-    #>no_financial_year: 'No financial year registered'
     #>no_lines_found: 'No product has been added to the order'
     #>no_payment_to_deposit: 'There are no payment to deposit'
     #>no_reopenable_journal: 'You can not re-open this journal.'
     #>no_stocks: 'You have no stock. If you want to manage the stock of a product, please check the option "Manage stocks" in the characteristics of your product.'
-    #>no_template_journal: 'No template for the journal'
-    #>no_template_journal_by_id: 'No template for the journal'
     #>no_unvalidated_operations: 'No task to do'
     #>no_warehouse: 'No warehouse is defined. Please create one in order to manage your stocks'
     #>password_successfully_changed: 'Your password has been updated successfully'
@@ -1182,8 +1175,8 @@ jpn:
   preferences:
     accountancy: #!
     #>bank_journal: 'Default bank journal'
-    #>bookkeep_automatically: 'Activate the automatic accounting transfer'
-    #>bookkeep_in_draft: 'Save the records in draft mode during accounting transfer'
+    #>bookkeep_automatically: 'Activate the automatic bookkeeping'
+    #>bookkeep_in_draft: 'Save the records in draft mode during bookkeeping'
     #>capital_gains_accounts: 'Profit for the year (earnings)'
     #>capital_losses_accounts: 'Profit for the year (loss)'
     #>cash_journal: 'Default cash journal'
