--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -502,7 +502,6 @@ spa:
     #>downpayment: 'Downpayment'
     draft: 'Niebla'
     draft_entries: 'niebla' #!
-    #>draft: 'Draft entry lines'
     #>duplicate: 'Duplicate'
     #>duration: 'Duration'
     #>duration_in_hours_and_minutes: '%{hours}h %{minutes}min'
@@ -607,15 +606,15 @@ spa:
     journal: 'Periodico'
     journal_detail: 'Cerrado al %{fecha de cerrado}'
     journal_entries: 'Escrituras'
-    journal_entry_lines_states: 'Estado de las escrituras utilizadas'
+    #>journal_entries_states: 'States of entries'
+    journal_entry_lines_states: 'Estado de las escrituras utilizadas' #!
     journal_name: '%{name}'
     journal_record_update: 'Modificar la pieza'
     journal_update: 'Modificar el periodico'
     journal_view:
       draft_entries: 'Niebla' #!
-      #>draft: 'Draft entries'
       entries: 'Éscrituras'
-      #>entry_lines: 'Lines of entries'
+      #>lines: 'Lines of entries'
       mixed: 'Piezas y Escrituras'
       records: 'Piezas' #!
     journals: 'Periodico general'
@@ -917,7 +916,7 @@ spa:
     save_in_draft: 'Salvar en la niebla'
     #>scheduled: 'Scheduled'
     search: 'buscars piezas/escrituras'
-    #>search_account: 'Search account'
+    #>search_account: 'Search for accounts'
     #>search_go: 'Search!'
     #>search_sales: 'Search sales'
     #>second_contact: 'Second address'
@@ -1143,14 +1142,14 @@ spa:
       other: 'Las %{cuentos} han sido validadas y son sacadas de la niebla' #!
       zero: 'Ninguna pieza ha sido validada' #!
     draft_entry_lines_are_validated:
-      #>one: 'One record has been validated'
-      #>other: '%{count} records has been validated'
-      #>zero: 'No records has been validated'
+      #>one: 'One entry has been validated'
+      #>other: '%{count} entries have been validated'
+      #>zero: 'No entries has been validated'
     entity_columns_are_needed: 'se debe especifiar a lo menos une columna para la persona y particularmente sur nombre.'
     exception_raised: 'Un error sobrevino durante el tratamiento : %{mensaje}'
     expired_session: 'sesion espirada. por favor reconectese.'
     fails_to_extract_listing: 'La extracción no ha podido hacerse : %{mensaje}'
-    import_succeeded: 'Sus datos han sido correctamente importados'
+    import_succeeded: 'Sus datos han sido correctamente importados' #!
     importation_cancelled: 'Sus datos no han sido importados. La importación ha sido anulada'
     importation_finished: 'La importación esta terminada.'
     impossible_to_add_lines: 'No se puede añadir productos a su venta, el presupuesto esta en encargo'
@@ -1179,18 +1178,18 @@ spa:
     need_warehouse_to_record_stock_moves: 'Para administrar sus depositos se debe registrar sus lugares de almacenamiento.'
     new_actual_number: 'El nuevo numero en curso es %{numero_actual}'
     no_authenticated: 'No puede ser identificado. El nombre de utilizador o la contrasña debe de ser incorrecta.'
-    no_balance_template: 'No hay modelo de documento para este equilibrio'
+    no_balance_template: 'No hay modelo de documento para este equilibrio' #!
     no_closable_financial_year: 'Hay ningun ejercicio para cerrar.'
     no_closable_journal: 'No se puede cerrar este periodico.'
     no_depositable_payments: 'No hay pago para entregar en banco'
     no_existing_mandates: 'No hay responsabilidades registradas por el momento'
-    no_financial_year: 'Ningun ejercicio registrado'
+    no_financial_year: 'Ningun ejercicio registrado' #!
     no_lines_found: 'Ningun producto ha sido añadido al encargo'
     no_payment_to_deposit: 'Ninguna forma de pago a cobrar'
     no_reopenable_journal: 'nos se puede cerrar este periodico.'
     no_stocks: 'No hay ningun deposito. Si se quiere adùinistrar los depositos para une producto, por favor escroge la opción "administrar los depositos" dentro de las caracteristicas de vuestro producto.'
-    no_template_journal: 'Ningun modelo de periodico'
-    no_template_journal_by_id: 'Ningun modedo de periodico'
+    no_template_journal: 'Ningun modelo de periodico' #!
+    no_template_journal_by_id: 'Ningun modedo de periodico' #!
     no_unvalidated_operations: 'Ningún trabajo que hay que realizar'
     no_warehouse: 'Ningun lugar de almacenamineto es definido. por favor cree uno para administrar los depositos'
     password_successfully_changed: 'Su contraseña ha sido puesta a día con éxito'
@@ -1228,8 +1227,8 @@ spa:
   preferences:
     accountancy: #!
     #>bank_journal: 'Default bank journal'
-    #>bookkeep_automatically: 'Activate the automatic accounting transfer'
-    #>bookkeep_in_draft: 'Save the records in draft mode during accounting transfer'
+    #>bookkeep_automatically: 'Activate the automatic bookkeeping'
+    #>bookkeep_in_draft: 'Save the records in draft mode during bookkeeping'
     #>capital_gains_accounts: 'Profit for the year (earnings)'
     #>capital_losses_accounts: 'Profit for the year (loss)'
     #>cash_journal: 'Default cash journal'
