--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -7,7 +7,9 @@ eng:
       #>account_dyli: 'Account dyli'
       #>account_entities_kame: 'Account entities kame'
       #>account_journal_entry_lines_kame: 'Account journal entry lines kame'
-      account_mark: 'Lettering account: %{number} - %{name}'
+      account_mark: 'Reconciliate account: %{number} - %{name}'
+      account_reconciliation: 'Account reconciliation'
+      #>account_reconciliation_kame: 'Account reconciliation kame'
       #>account_unmark: 'Account unmark'
       account_update: 'Edit account: %{number} - %{name}'
       accounts: 'Plan of accounts'
@@ -18,7 +20,7 @@ eng:
       bank_statement_create: 'Create a new account statement'
       #>bank_statement_delete: 'Bank statement delete'
       #>bank_statement_lines_kame: 'Bank statement lines kame'
-      bank_statement_point: 'Point bank statement %{number}'
+      bank_statement_point: 'Bank reconciliation with bank statement %{number}'
       bank_statement_update: 'Edit bank statement %{number}'
       bank_statements: 'Bank statements'
       #>bank_statements_kame: 'Bank statements kame'
@@ -53,8 +55,6 @@ eng:
       journal_update: 'Edit journal: %{name}'
       journals: 'Journals'
       #>journals_kame: 'Journals kame'
-      unmarked_journal_entry_lines: 'Accounts lettering'
-      #>unmarked_journal_entry_lines_kame: 'Unmarked journal entry lines kame'
     application:
       #>i18nize: 'I18nize'
     authentication:
@@ -258,7 +258,7 @@ eng:
       price_create: 'Add a new price'
       #>price_delete: 'Price delete'
       #>price_find: 'Price find'
-      price_update: 'Edit price %{amount}/%{amount_with_taxes} of %{product}'
+      price_update: 'Edit price %{pretax_amount}/%{amount} of %{product}'
       prices: 'Prices'
       #>prices_export: 'Prices export'
       prices_import: 'Import prices in CSV'
@@ -597,7 +597,6 @@ eng:
     account_financial_assets: 'Financial Assets'
     account_fixed_assets: 'Fixed Assets'
     account_inventories_assets: 'Inventories Assets'
-    account_mark: 'Account lettering'
     account_name: 'Account name'
     account_number: 'Account number'
     account_others_assets: 'Others'
@@ -733,7 +732,6 @@ eng:
     csv_statistics: 'CSV statistics'
     cumul: 'Accumulation of tattle and previous balance N°%{number}'
     current: 'Current'
-    current_letter: 'Lettering in process: %{letter}'
     custom_field_update: 'Custom field update'
     data_to_export: 'Data to export'
     data_to_extract: 'Data to extract'
@@ -893,8 +891,6 @@ eng:
     letter_function_title: 'Dear madam, dear sir'
     letter_introduction: 'Following our conversation, I give you the elements of the estimate.'
     letter_options: 'Letter options'
-    lettering_account_client: 'Lettering Customer accounts'
-    lettering_account_supplier: 'Lettering Suppliers aacounts'
     lettering_modes:
       attorneys: 'Attorneys'
       clients: 'Customers'
@@ -1186,6 +1182,7 @@ eng:
     send: 'Send the mail'
     send_test: 'Send test'
     sequences_load: 'Load missing sequences'
+    set_reconcilable_new_but_existing_third_accounts: 'Set reconcilable the new but existing third accounts (clients, suppliers and attorneys)'
     ship: 'Ship'
     simplified: 'Simplified Accounting'
     source: 'Source'
@@ -1250,6 +1247,7 @@ eng:
     unpaid_sales_orders_export: 'Export unpaid sales orders in CSV'
     unparted: 'Unparted'
     unreceived: 'Unreceived'
+    unset_reconcilable_old_third_accounts: 'Unset reconcilable old third accounts (clients, suppliers and attorneys)'
     unused_payment: 'Unused payment'
     unvalid_date: 'Invalid date'
     unvalidated_operations: 'Operations not validated'
