--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -332,8 +332,7 @@ fra:
     address: 'Adresse'
     admin: 'Administrateur système'
     agency_code: 'Code guichet'
-    amount: 'Montant HT'
-    amount_with_taxes: 'Montant TTC'
+    amount: 'Montant TTC'
     annotation: 'Annotation'
     area: 'Zone postale'
     area_id: 'Zone postale'
@@ -732,7 +731,7 @@ fra:
     payment_mode: 'Mode d''encaissement'
     payment_mode_complement: 'Complément d''information sur le mode d''encaissement'
     payment_mode_id: 'Mode d''encaissement'
-    payment_modes: 'Modes d''encaissement'
+    payment_modes: 'Modes d''encaissement' #!
     payment_on: 'A régler au plus tard le'
     payment_uses: 'Parties d''encaissement'
     payment_way: 'Mode de décaissement'
@@ -749,6 +748,7 @@ fra:
     position: 'Position'
     postcode: 'Code postal'
     preferences: 'Préférences'
+    pretax_amount: 'Montant HT'
     price: 'Prix'
     price_amount: 'Montant HT'
     price_id: 'Prix'
@@ -794,6 +794,7 @@ fra:
     receiver_currency_id: 'Devise reçue'
     receiver_currency_rate: 'Taux de la devise reçue'
     receiver_journal_entry_id: 'Écriture de la réception'
+    reconcilable: 'Lettrable'
     record_value: 'Enregistrement'
     record_value_id: 'Enregistrement'
     record_value_type: 'Type d''enregistrement'
@@ -829,7 +830,6 @@ fra:
     sales_invoice: 'Facture'
     sales_invoice_id: 'Facture'
     sales_invoice_lines: 'Lignes de facture'
-    sales_invoiceable: 'À facturer' #!
     sales_invoices: 'Factures'
     sales_invoices_count: 'Nombre de factures'
     sales_order: 'Vente'
