--- a/config/locales/eng/prints/sales_invoice.xml
+++ b/config/locales/eng/prints/sales_invoice.xml
@@ -32,9 +32,9 @@
         <column label="Code" property="product/code" width="20mm" align="center"/>
         <column label="Désignation" property="designation" width="80mm"/>
         <column label="Qté." property="quantity" width="13mm" numeric="money"/>
-        <column label="Prix unitaire HT" property="price/amount" width="22mm" numeric="money"/>
-        <column label="Montant Hors Taxes" property="amount" width="20mm" numeric="money"/>
-        <column label="Montant T.V.A." property="taxes" width="20mm" numeric="money"/>
+        <column label="Prix unitaire HT" property="price/pretax_amount" width="22mm" numeric="money"/>
+        <column label="Montant Hors Taxes" property="pretax_amount" width="20mm" numeric="money"/>
+        <column label="Montant T.V.A." property="taxes_amount" width="20mm" numeric="money"/>
         <column label="Taux T.V.A." property="price.tax/amount" width="15mm" align="center"/>
       </table>
       
@@ -43,9 +43,9 @@
         <set left="100mm" top="1mm">
           <text value="Totaux ({{sales_invoice.lines[0].price.currency.code}})" top="0.5mm" left="33mm" align="right" bold="true"/>
           <text value="Net à payer ({{sales_invoice.lines[0].price.currency.code}})" top="6mm" left="33mm" align="right" bold="true" size="11.5"/>
-          <text value="{{sales_invoice.amount_with_taxes?numeric}}" top="6mm" left="55mm" align="center" bold="true" size="12"/>
-          <text value="{{sales_invoice.amount?numeric}}" top="0.5mm" left="54.5mm" align="right"/>
-          <text value="{{sales_invoice.taxes?numeric}}" top="0.5mm" left="74.5mm" align="right"/>
+          <text value="{{sales_invoice.amount?numeric}}" top="6mm" left="55mm" align="center" bold="true" size="12"/>
+          <text value="{{sales_invoice.pretax_amount?numeric}}" top="0.5mm" left="54.5mm" align="right"/>
+          <text value="{{sales_invoice.taxes_amount?numeric}}" top="0.5mm" left="74.5mm" align="right"/>
           <rectangle width="75mm" height="4mm"  border="0.5 solid #000"/>
           <rectangle width="75mm" height="7mm" top="4mm" border="0.5 solid #000"/>
           <line path="35mm,0 ; 35mm,11mm" width="0.5"  border="0.5 solid #000"/>
