--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -826,6 +826,7 @@ spa:
     production_rights: 'Derechos modulo producción'
     #>productions: 'Productions'
     #>products: 'Products'
+    #>profitability: 'Profitability'
     #>purchase: 'Purchase'
     #>purchase_order: 'Purchase order'
     #>purchase_order_lines: 'Purchase order lines'
@@ -987,7 +988,9 @@ spa:
     total: 'Total'
     total_amount: 'Total importe HT'
     total_invoiced_amount: 'Total importe facturado'
+    #>total_paid_amount: 'Total paid amount'
     total_quantity: 'Quantidad total'
+    #>total_unpaid_amount: 'Total unpaid amount'
     totals: 'Totales (piezas validas y niebla)'
     #>tracking: 'Tracking'
     #>transfer: 'Transfer'
